examples/test/testpolicy6138.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6138
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key9: value47
      key30: value6
      key41: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value26
          key23: value14
      podSelector:
        matchLabels:
          key7: value45
